Certification app component/certpkg/force-app/main/default/objects/Certificate__c/Certificate__c.object-meta.xml
<CustomObject>
    <label>Certificate</label>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>Sr. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>