Certification app component/certpkg/force-app/main/default/objects/Certificate__c/fields/AssociateId__c.field-meta.xml
<CustomField>
    <fullName>AssociateId__c</fullName>
    <label>AssociateId</label>
    <referenceTo>Associates__c</referenceTo>
    <relationshipLabel>Certificates</relationshipLabel>
    <relationshipName>Certificates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>