Certification app component/certpkg/force-app/main/default/objects/Certificate__c/fields/Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Number__c</fullName>
    <label>Certificate Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>