Certification app component/certpkg/force-app/main/default/objects/Certificate__c/fields/CertName__c.field-meta.xml
<CustomField>
    <fullName>CertName__c</fullName>
    <label>CertificateName</label>
    <referenceTo>CertificateMaster__c</referenceTo>
    <relationshipLabel>Certificates</relationshipLabel>
    <relationshipName>Certificates</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>