Certification app component/certpkg/force-app/main/default/objects/Certificate__c/fields/Planned_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Date__c</fullName>
    <label>Planned Date</label>
    <type>Date</type>
</CustomField>